# kinesis_plugin

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  kinesis_plugin.cpp  kinesis_producer_test.cpp
include/eosio/kinesis_plugin/: kinesis_plugin.hpp  kinesis_producer.hpp
